# base-model-2

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README-vastai.md  README.md  bench_cuda_ablation.py  bench_doc_linear_attn.py  bench_generate.py  bench_overfit.py  bench_trials.sh  bench_triton.py  build_foreign_dict.py  calc_inference_profile.py  calc_sizes.py  calc_train_schedule.py  capacity_analysis.md  debug_nan.py  entrypoint.sh  eval_ckpt_bias.py  eval_trials.py  eval_variants.py  export_editor.py  export_model.py  find_sizes.py  int8_optimization_summary.md  mecab_bbpe_ko.model  mecab_bbpe_ko.vocab  noise_config.test1.json  note.md  pack_corpus.sh  parse_mem.py  plain_bbpe_ko.model  plain_bbpe_ko.vocab  ref.txt  requirements.txt  scrape_wiki.py  test_bf16_perf.py  test_document_isolation.py  (+19 more)
bbpe_tokenizer/: __init__.py  bbpe_wrapper.py  train_tokenizer.py
char_tokenizer/: __init__.py  char_level_tokenizer.json  char_wrapper.py  make_tokenizer.py
corpus/: build_sample_10g.py  build_sample_20g.py  build_sample_full.py  decontaminate.py
docs/: NOISE_RESEARCH.md  experiment_handoff_2026-02-23.md  gpu_optimization_plan.md  int8_cuda_backend.md  linear_cross_attention_update.md  minimal_non_attention_trials.md  non_attention_source_reference_review.md  tokenizer_comparison.md  training_audit_checklist.md
error_generation/: __init__.py  chat_style_errors.py  common_misspellings.py  conjugation_errors.py  consonant_errors.py  (+26 more)
inference/: Cargo.toml  build.rs
inference/src/: bmmq.rs  config.rs  i8_kernel.c  main.rs  model.rs  tokenizer.rs
(+63 files in other folders)
