[package]
name = "bitmamba-inference"
version = "0.1.0"
edition = "2021"
description = "BitMamba Seq2Seq CPU inference engine"

[dependencies]
candle-core = "0.8"
candle-nn = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokenizers = "0.20"
clap = { version = "4", features = ["derive"] }
rayon = "1.10"

[build-dependencies]
cc = "1"

[profile.release]
opt-level = 3
lto = true
